feat: Completed to create proto type

--- a/playground/locales/en.yml
+++ b/playground/locales/en.yml
@@ -2,3 +2,6 @@ _version: 1
 "InsufficientFunds": "You do not have enough funds to complete this transaction. Please check your balance and try again."
 "OutOfStock": "This item is currently out of stock. Please check back later."
 "PermissionDeny": "You do not have permission to access this resource. Please contact your administrator."
+"MultipleTuple": "1en"
+"FieldError": "2en"
+"FooError": "3en"
