--- a/playground/locales/ja.yml
+++ b/playground/locales/ja.yml
@@ -1,7 +1,7 @@
 _version: 1
-"InsufficientFunds": "この取引を完了するための残高が不足しています。残高を確認してもう一度お試しください。"
-"OutOfStock": "この商品は現在在庫切れです。後ほど再度ご確認ください。"
-"PermissionDeny": "このリソースにアクセスする権限がありません。管理者にお問い合わせください。"
-"MultipleTuple": "1ja"
-"FieldError": "2ja"
-"FooError": "3ja"
+"error":
+  "AuthorizationError": "このリソースに対するアクセス権限がありません。"
+  "InsufficientFunds": "この取引を完了するための残高が不足しています。"
+  "OutOfStock": "この商品は現在在庫切れです。"
+  "ResourceNotFound": "リソースが見つかりません。"
+  "ValidationError": "無効な入力です。"
